[package]
name = "seq-ex"
version = "1.0.2"
authors = ["Monica Moniot"]
edition = "2021"

[lib]
name = "seqex"
path = "src/lib.rs"
doc = true

[features]
default = ["serde", "std"]
tokio = ["std", "dep:tokio"]
std = []

[dependencies]
serde = { version = "1.0.183", default-features = false, features = ["derive"], optional = true }
tokio = { version = "1.31.0", default-features = false, features = ["sync", "time"], optional = true }

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"]}
serde_cbor = { version = "0.11.2" }
tokio = { version = "1.31.0", default-features = false, features = ["full"] }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "hello_world_tokio"
path = "examples/hello_world_tokio.rs"
required-features = ["tokio"]

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "file_download"
path = "examples/file_download.rs"
